# NetGuard

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  http_test.pcap
.github/: GITHUB_TEMPLATE_BUG_REPORT.md
.github/workflows/: ci.yml
.github/workflows/ISSUE_TEMPLATES/: feature_request.md
config/: interface.cfg
include/config/: interface.h
include/parsers/: arp.h  ethernet.h  ftp.h  http.h  ipv4.h  tcp.h
include/utils/: bytes.h  decEthernet.h  decHttp.h  decIPv4.h  entry.h
parsers_backup/: http-analyzer.evt  http-analyzer.spicy  http.spicy
src/: entry.cpp  entry.cpp.bak  main.cpp
src/config/: interface.cpp
src/parsers/: arp.cpp  ethernet.cpp  ftp.cpp  http.cpp  ipv4.cpp  tcp.cpp
src/parsing/: http_parser.cpp  http_parser.h
src/utils/: decEthernet.cpp  decHttp.cpp  decIPv4.cpp
